--- a/app/src/main/res/drawable/border_large.xml
+++ b/app/src/main/res/drawable/border_large.xml
@@ -2,5 +2,5 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke android:width="5px"/>
+    <stroke android:width="5dp"/>
 </shape>
