--- a/app/src/main/res/drawable/border_side_right.xml
+++ b/app/src/main/res/drawable/border_side_right.xml
@@ -9,7 +9,7 @@
         <shape android:shape="rectangle" >
             <solid android:color="@android:color/transparent" />
             <stroke
-                android:width="3px"
+                android:width="3dp"
                 android:color="@color/black" />
         </shape>
     </item>
@@ -19,7 +19,7 @@
         <shape android:shape="rectangle" >
             <solid android:color="@android:color/transparent" />
             <stroke
-                android:width="1px"
+                android:width="1dp"
                 android:color="@color/black" />
         </shape>
     </item>
